2018-10-18 DB: added source for Delegators Lab + added example of listener aggregate in Application module

--- a/onlinemarket.work/composer.json
+++ b/onlinemarket.work/composer.json
@@ -44,7 +44,9 @@
             "Market\\": "module/Market/src/",
             "Model\\": "module/Model/src/",
 			"Events\\": "module/Events/src/",
-			"PrivateMessages\\": "module/PrivateMessages/src/"
+			"PrivateMessages\\": "module/PrivateMessages/src/",
+			"Registration\\": "module/Registration/src/",
+			"SecurePost\\": "module/SecurePost/src/"
         }
     },
     "autoload-dev": {
