--- a/onlinemarket.work/composer.json
+++ b/onlinemarket.work/composer.json
@@ -21,7 +21,7 @@
         "zendframework/zend-db": "*",
         "zendframework/zend-form": "*",
         "zendframework/zend-i18n": "*",
-        "zendframework/zend-session": "*",
+        "zendframework/zend-session": "^2.8",
         "zendframework/zend-captcha": "*",
         "phpunit/phpunit": "*",
         "zendframework/zend-test": "*",
@@ -31,7 +31,7 @@
         "zendframework/zend-crypt": "^3.2",
         "zendframework/zend-mvc-plugin-flashmessenger": "^1.0",
         "zendframework/zend-json": "^3.0",
-        "zendframework/zend-cache": "^2.7",
+        "zendframework/zend-cache": "^2.8",
         "zendframework/zend-permissions-acl": "^2.6",
         "zendframework/zend-navigation": "^2.8",
         "zendframework/zend-log": "^2.9",
@@ -46,7 +46,9 @@
 			"Events\\": "module/Events/src/",
 			"PrivateMessages\\": "module/PrivateMessages/src/",
 			"Registration\\": "module/Registration/src/",
-			"SecurePost\\": "module/SecurePost/src/"
+			"SecurePost\\": "module/SecurePost/src/",
+			"PhpSession\\": "module/PhpSession/src/",
+			"Cache\\" : "module/Cache/src/"
         }
     },
     "autoload-dev": {
