2018-10-25 DB: finished uploading solutions to ACL and NAVIGATION labs + added example of listener for JWT

--- a/onlinemarket.work/.gitignore
+++ b/onlinemarket.work/.gitignore
@@ -1,8 +1,9 @@
 .vagrant/
 vendor/
-data/cache/*
-data/logs/*
 data/auth/*
+data/cache/*
+data/files/*
+data/logs/*
 !data/cache/.gitkeep
 public/captcha/*
 phpunit.xml
